<?xml version="1.0"?>
<package format="2">
  <name>tiago_posture_regulation</name>
  <version>0.0.0</version>
  <description>The tiago_posture_regulation package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>